2008-10-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.c (gimp_tag_cache_load): use GimpXmlParser
	instead of GMarkupParser.

2008-10-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpfilteredcontainer.c
	* app/core/gimppalette.c
	* app/core/gimptagcache.c
	* app/widgets/gimptagentry.c
	* app/widgets/gimptagpopup.c: rewrote GList iterations using
	for instead of while.

2008-10-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpbrush.c
	* app/core/gimpgradient.c
	* app/core/gimppalette.c
	* app/core/gimppattern.c: implementations of GimpTagged methods moved
	right after the implementations of other vtable methods. GimpTagged
	interface init functions moved right after class_init() functions.
	Improved function header formatting.

2008-10-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpprojection.h: add a "use_gegl" boolean member.

	* app/core/gimpprojection-construct.c (gimp_projection_construct):
	use the boolean instead of hardcoding FALSE.

	* app/actions/view-actions.c
	* app/actions/view-commands.[ch]: add a "Use GEGL" action and
	callback which sets the boolean and exposes the display.

	* menus/image-menu.xml.in: add it to the "View" menu.

2008-10-11  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationadditionmode.c
	(gimp_operation_addition_mode_process): Implement this one.

2008-10-11  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimp-gegl-utils.c (gimp_layer_mode_to_gegl_operation):
	it's gimp-screen-node not gimp-screen_mode.

2008-10-11  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpoperationpointcomposer.[ch]: add an empty abstract
	GeglOperationPointComposer subclass which can be used to hook in
	common debug or test or whatever code for below layer modes.

	* app/gegl/gimpoperation*mode.[ch]: add empty stubs of layer mode
	operations which do nothing but copying input to output.

	* app/gegl/Makefile.am
	* app/gegl/gegl-types.h: add them here and reordered things a bit.
